# rust_crud_api

./: Cargo.toml
src/: main.rs
src/api/: mod.rs  not_found.rs  user_api.rs
src/models/: user_model.rs  utils.rs
src/repository/: mod.rs  mongo_repo.rs  user_repo.rs
src/utils/: helper.rs
