[package]
name = "test_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = "1.0.137"
dotenv = "0.15.0"
cargo-watch = "8.1.1"
serde_json = "1.0"
actix-web-validator = "3.0.0"
validator = { version = "0.14", features = ["derive"] }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
